# rachleff-list

./: .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pytest.yml
_data/: 2021.txt
src/: constants.py  data.py  main.py  parse.py  rachleff
src/rachleff/: 2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  __init__.py  __main__.py  constants.py  data.py  dropped.py  main.py  parse.py
tests/parse/: test_company_in_year.py  test_extract_companies.py  test_get_data.py  test_pdf_to_string.py
