[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false

venvPath = "./venv/"
pythonVersion = "3.8"

executionEnvironments = [
  { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
  { root = "src" }
]