[metadata]
name = example-pkg-lifekaizen-test-37378
version = 0.0.1
author = Eric Norman
author_email = "Eric Norman" <eric@norman.zone>
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Environment :: Console
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src