[metadata]
name = rachleff
version = 0.0.2
author = Eric Norman
author_email = eric@norman.zone
description = Lookup companies in the Wealthfront (Andy Rachleff) list
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/lifekaizen/rachleff-list/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
		Operating System :: MacOS :: MacOS X

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.6
install_requires =
  black
	click
	pydantic
	pylint
	pytest
	python-pdfbox
	setuptools

[options.packages.find]
where = src
exclude =
	tests
